# VoidSnap

./: Cargo.toml  README.md
src/: capture.rs  clipboard.rs  config.rs  default_config.toml  main.rs  overlay.rs  wayland.rs
